--- a/project/src/main/Webapp/index.html
+++ b/project/src/main/Webapp/index.html
@@ -12,6 +12,7 @@
         </td>
         <td>
           <h1>Hello  DevOps Engineers and Architects!</h1>
+	  <h1>Pull test</h1>
         </td>
       </tr>
     </table>
